load("@bazel_skylib//rules:write_file.bzl", "write_file")

###########################
# Fixtures for example tests

# For using acorn as our test fixture, this is
# the serialized AST for the shortest legal JS program
write_file(
    name = "write_expected_one_ast",
    out = "expected_one_ast.json",
    content = [
        """{"type":"Program","start":0,"end":1,"body":[{"type":"ExpressionStatement","start":0,"end":1,"expression":{"type":"Literal","start":0,"end":1,"value":1,"raw":"1"}}],"sourceType":"script"}\n""",
    ],
    visibility = ["//examples:__subpackages__"],
)
