"Public API"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//js/private:js_binary",
        "//js/private:js_image_layer",
        "//js/private:js_library",
        "//js/private:js_run_binary",
        "//js/private:js_run_devserver",
        "@aspect_tools_telemetry_report//:defs.bzl",
    ],
)

starlark_doc_extract(
    name = "defs.doc_extract",
    src = "defs.bzl",
    deps = [":defs"],
)

bzl_library(
    name = "libs",
    srcs = ["libs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//js/private:js_binary",
        "//js/private:js_library",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//js/private:js_info",
    ],
)
