"Public API"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

# This flag controls the default behavior of the use_execroot_entry_point flag
# on js_run_binary.
bool_flag(
    name = "use_execroot_entry_point",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "_use_execroot_entry_point_true",
    flag_values = {"use_execroot_entry_point": "True"},
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//js/private:js_binary",
        "//js/private:js_image_layer",
        "//js/private:js_library",
        "//js/private:js_run_binary",
        "//js/private:js_run_devserver",
        "@aspect_tools_telemetry_report//:defs.bzl",
    ],
)

starlark_doc_extract(
    name = "defs.doc_extract",
    src = "defs.bzl",
    deps = [":defs"],
)

bzl_library(
    name = "proto",
    srcs = ["proto.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//js/private:js_proto_toolchain",
        "//js/private:proto",
        "@protobuf//bazel/toolchains:proto_lang_toolchain_bzl",
    ],
)

starlark_doc_extract(
    name = "proto.doc_extract",
    src = "proto.bzl",
    deps = [":proto"],
)

bzl_library(
    name = "rpc",
    srcs = ["rpc.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//js/private:js_proto_toolchain",
        "//js/private:rpc",
    ],
)

starlark_doc_extract(
    name = "rpc.doc_extract",
    src = "rpc.bzl",
    deps = [
        "//js/private:js_proto_toolchain",
        "//js/private:rpc",
    ],
)

bzl_library(
    name = "libs",
    srcs = ["libs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//js/private:js_binary",
        "//js/private:js_library",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//js/private:js_info",
    ],
)
