"Public API"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//npm/private:npm_link_package",
        "//npm/private:npm_package",
        "//npm/private:npm_package_info",
        "//npm/private:npm_package_store_info",
    ],
)

bzl_library(
    name = "libs",
    srcs = ["libs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//npm/private:npm_package",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//npm/private:npm_linked_package_info",
        "//npm/private:npm_package_info",
        "//npm/private:npm_package_store_info",
    ],
)

bzl_library(
    name = "npm_import",
    srcs = ["npm_import.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//npm/private:npm_import",
        "//npm/private:npm_translate_lock",
        "//npm/private:utils",
    ],
)
