"Public API"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//npm/private:npm_link_package",
        "//npm/private:npm_package",
        "//npm/private:npm_package_info",
        "//npm/private:npm_package_store_info",
    ],
)

starlark_doc_extract(
    name = "defs.doc_extract",
    src = "defs.bzl",
    deps = [":defs"],
)

bzl_library(
    name = "libs",
    srcs = ["libs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//npm/private:npm_package",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//npm/private:npm_package_info",
        "//npm/private:npm_package_store_info",
    ],
)

bzl_library(
    name = "repositories",
    srcs = [
        "repositories.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//npm/private:npm_import",
        "//npm/private:npm_translate_lock",
        "//npm/private:pnpm_repository",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//npm/private:npm_import",
        "//npm/private:npm_translate_lock",
        "//npm/private:npm_translate_lock_generate",
        "//npm/private:npm_translate_lock_helpers",
        "//npm/private:npm_translate_lock_macro_helpers",
        "//npm/private:npmrc",
        "//npm/private:pnpm_extension",
        "//npm/private:pnpm_repository",
        "@bazel_lib//lib:repo_utils",
    ],
)

starlark_doc_extract(
    name = "extensions.doc_extract",
    src = "extensions.bzl",
    deps = [":extensions"],
)
