"""Tools for local development and formatting in this repository.

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@bazelrc-preset.bzl", "bazelrc_preset")

package(default_visibility = ["//:__subpackages__"])

format_multirun(
    name = "format",
    shell = "@aspect_rules_lint//format:shfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
)

bazelrc_preset(
    name = "preset",
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
    # The output is specific to the version in .bazelversion
    tags = ["manual"],
)
