load("@bazelrc-preset.bzl", "bazelrc_preset")

package(default_visibility = ["//:__subpackages__"])

bazelrc_preset(
    name = "preset",
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
    # The output is specific to the version in .bazelversion
    tags = [
        "skip-on-bazel8",
        "skip-on-bazel9",
    ],
)
