"Aspect bazelrc presets; see https://docs.aspect.build/guides/bazelrc"

load("@aspect_bazel_lib//lib:bazelrc_presets.bzl", "write_aspect_bazelrc_presets")

write_aspect_bazelrc_presets(
    name = "update_aspect_bazelrc_presets",
    presets = [
        "ci",
        "convenience",
        "correctness",
        "debug",
        "javascript",
        "performance",
    ],
    # Disable the tests with non-bzlmod which may have a different @aspect_bazel_lib version
    target_compatible_with = select({
        "@aspect_bazel_lib//lib:bzlmod": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)
