load("@aspect_bazel_lib//lib:bazelrc_presets.bzl", "write_aspect_bazelrc_presets")

write_aspect_bazelrc_presets(
    name = "update_aspect_bazelrc_presets",
    presets = [
        "bazel6",
        "bazel7",
    ],
    target_compatible_with = select({
        "@aspect_bazel_lib//lib:bzlmod": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)
